--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -565,9 +565,7 @@ city_popn <- region_data |> filter(region %in% c("Toronto", "Montréal", "Vancou
 rep_popn <- rep(city_popn, 2)
 ```
 
-We can create a vector of the city populations. 
-
-Then we use `mutate` to calculate
+We can create a vector of the city populations. Then we use `mutate` to calculate
 the proportion of people reporting a given language as their primary language at home for all the languages in the `official_langs` data set by dividing the column by our vector of city populations. We give the mutated column a new name `most_at_home_proportion`, which will create a new column in our data set. 
 ```{r}
 city_populations <- c(5928040, 4098927, 2463431, 1392609, 1321426)
@@ -677,7 +675,7 @@ filter(other_col > 5) |>
 select(new_col)
 ```
 
-> Note: The `|>` pipe operator was inspired by a previous version of the pipe operator, `%>%`. The `%>%` pipe operator is not built into R and needs to be loaded via an external R package. There are some other drawbacks to using `%>%`, which are beyond the scope of this textbook. However, be aware that `%>%` exists since you may see it used in some books or other sources. In this textbook, we will be using the base R pipe operator syntax, `|>`. 
+> Note: The `|>` pipe operator was inspired by a previous version of the pipe operator, `%>%`. The `%>%` pipe operator is not built into R and needs to be loaded via an external R package. There are some other drawbacks to using `%>%`, which are beyond the scope of this textbook. Be aware that `%>%` exists since you may see it used in some books or other sources. However, in this textbook, we will be using the base R pipe operator syntax, `|>`. 
 
 You can think of the pipe as a physical pipe. It takes the output from the function on the left-hand side of the pipe, and
 passes it as the first argument to the function on the right-hand side of the pipe. Note here that we have again split the 
@@ -763,7 +761,7 @@ Additionally, piping many functions can be overwhelming, so you may also want to
 
 ### Calculating summary statistics:
 
-As a part of many data analyses, we need to calculate a summary value for the data (a summary statistic). A useful `dplyr` function for doing this is 
+As a part of many data analyses, we need to calculate a summary value for the data (a *summary statistic*). A useful `dplyr` function for doing this is 
 `summarize`. Examples of summary statistics we might want to calculate are the number of observations, the average/mean value 
 for a column, the minimum value for a column, etc. Below we show how to use the `summarize` function to calculate the minimum and maximum 
 number of Canadians reporting a particular language as their primary language at home:
@@ -778,28 +776,27 @@ lang_summary
 
 From this we see that there are some languages in the data set the no one speaks
 as their primary language at home, as well as that the most commonly spoken 
-primary language at home is spoken by  `r format(lang_summary$most_most_at_home[1], scientific = FALSE, big.mark = ",")` 
-people.
+primary language at home is spoken by  `r format(lang_summary$most_most_at_home[1], scientific = FALSE, big.mark = ",")`  people. 
 
-Suppose we wanted to find the maximum value for all the numeric columns in the `lang_home_tidy` data set. 
-We could apply `summarize` in the same way that we did above to find the maximum values: 
+<!-- Suppose we wanted to find the maximum value for all the numeric columns in the `lang_home_tidy` data set.  -->
+<!-- We could apply `summarize` in the same way that we did above to find the maximum values:  -->
 
-```{r}
-lang_summary_max <- summarize(lang_home_tidy, 
-             most_most_at_home = max(most_at_home), 
-             most_most_at_work = max(most_at_work))
-lang_summary_max
-```
+<!-- ```{r} -->
+<!-- lang_summary_max <- summarize(lang_home_tidy,  -->
+<!--              most_most_at_home = max(most_at_home),  -->
+<!--              most_most_at_work = max(most_at_work)) -->
+<!-- lang_summary_max -->
+<!-- ``` -->
 
-The approach above is a valid way to do this, but if we had many numeric columns in our data set then this would take a lot of time since we would have to explicitly write out the name of each column! A faster and less error-prone way to find the maximum value of only the numeric columns is to use the `summarize_if` function. The first argument is the data set we want to summarize, `lang_home_tidy`. The second argument is the required condition, here if `is.numeric` is true for a particular column. The third argument is the function we want to summarize with, here `max`. Therefore we write:
+<!-- The approach above is a valid way to do this, but if we had many numeric columns in our data set then this method would take a lot of time since we would have to explicitly write out the name of each column! A faster and less error-prone way to apply function(s) to columns that satisfy a certain condition is to use the `summarize_if` function. The first argument is the data set we want to summarize (`lang_home_tidy`). The second argument is the required condition, here if a particular column is numeric then the function will be applied. The third argument is the function we want to summarize with, here `max`. Therefore we write: -->
 
-```{r 02-summarize-if}
-summarize_if(lang_home_tidy, 
-             is.numeric, 
-             max)
-```
-Notice that we get the same output as we did above! From the table, we see that the most commonly spoken 
-primary language at home is spoken by  `r format(lang_summary_max$most_most_at_home[1], scientific = FALSE, big.mark = ",")` people and the most commonly spoken language at work is spoken by  `r format(lang_summary_max$most_most_at_work[1], scientific = FALSE, big.mark = ",")` people. 
+<!-- ```{r 02-summarize-if} -->
+<!-- summarize_if(lang_home_tidy,  -->
+<!--              is.numeric,  -->
+<!--              max) -->
+<!-- ``` -->
+<!-- Notice that we get the same output as we did above! From the table, we see that the most commonly spoken  -->
+<!-- primary language at home is spoken by  `r format(lang_summary_max$most_most_at_home[1], scientific = FALSE, big.mark = ",")` people and the most commonly spoken language at work is spoken by  `r format(lang_summary_max$most_most_at_work[1], scientific = FALSE, big.mark = ",")` people.  -->
 
 ### Calculating group summary statistics:
 
@@ -828,7 +825,7 @@ useful functions, we recommend you checkout [this chapter](http://stat545.com/bl
 Where should you turn when you discover the next step in your data wrangling/cleaning process requires you to apply a function to 
 each column in a data frame? The process of repeating a function on different columns or different data sets is called **iteration**. For example, suppose you wanted to know the maximum value of each column in a data frame. You could use `summarize` 
 as discussed above. However, this becomes inconvenient when you have many columns, as `summarize` requires you to type out a column name and a data 
-transformation for each summary statistic you want to calculate.
+transformation for each summary statistic you want to calculate. 
 
 In cases like this, where you want to apply the same data transformation to all columns, it is more efficient to use `dplyr`'s `across` function to 
 apply a transformation to each column. For example, let's find the maximum value of each column of the `region_lang`. First, let’s peek at the data to familiarize ourselves with it:
@@ -837,15 +834,25 @@ region_lang <- read_csv("data/region_lang.csv")
 region_lang
 ```
 
+We could apply `summarize` in the same way that we did above to find the maximum values:
+```{r} 
+lang_summary_max <- summarize(region_lang,  
+                              mother_tongue = max(mother_tongue), 
+                              most_at_home = max(most_at_home),
+                              most_at_work = max(most_at_work), 
+                              lang_known = max(lang_known)) 
+lang_summary_max 
+``` 
 
-Next, we use `summarize` and `across` to apply the `max` function to the columns `mother_tongue` up to `lang_known`. In the first argument of `across` we specify the columns and in the second argument we indicate the function we want to apply.
+The approach above is a valid way to do this, but if we had many columns in our data set then this method would take a lot of time since we would have to explicitly write out the name of each column! A faster and less error-prone way to apply function(s) to many columns is to use `summarize` and `across`. In the first argument of `across` we specify the columns we want to summarize and in the second argument we indicate the function we want to apply.
+
 ```{r 02-across-data}
 max_of_columns <- region_lang |>
   summarize(across(mother_tongue:lang_known, max))
 
 max_of_columns
 ```
-
+We get the same output as we did above and we didn't have to write out each and every column name! 
 
 What if you need to add other arguments to the functions you want to use? For example, what if there were NA values in our columns that we wanted to know the maximum of? 
 
@@ -861,7 +868,15 @@ write_csv("data/region_lang_with_nas.csv")
 region_with_nas <- read_csv("data/region_lang_with_nas.csv")
 region_with_nas
 ```
-Notice `summarize` returns `NA` for the `most_at_work` and `lang_known` variables since those columns contained NAs in the data frame. This is what happens with many of the built-in R statistical functions when NA's are present (it is not solely a problem with `summarize` and `across`). Thus, we also need to add the argument `na.rm  = TRUE` (`na.rm` means "NA remove") to the `across` function so that we get a more useful value than `NA` returned. An example of this is shown below:
+Notice `summarize` returns `NA` for the `most_at_work` and `lang_known` variables since those columns contained NAs in the data frame. This is what happens with many of the built-in R statistical functions when NA's are present (it is not solely a problem with `summarize` and `across`).
+
+```{r 02-nas-region}
+region_with_nas |>
+  summarize(across(mother_tongue:lang_known, max))
+```
+
+Thus, we also need to add the argument `na.rm  = TRUE` (`na.rm` means "NA remove") to the `across` function so that we get a more useful value than `NA` returned. An example of this is shown below:
+
 ```{r 02-across-data-nas}
 max_of_columns <- region_with_nas |>
   summarize(across(mother_tongue:lang_known, max, na.rm = TRUE))
