--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -796,7 +796,7 @@ primary language at home is spoken by  `r format(lang_summary$most_most_at_home[
 <!--              max) -->
 <!-- ``` -->
 <!-- Notice that we get the same output as we did above! From the table, we see that the most commonly spoken  -->
-<!-- primary language at home is spoken by  `r format(lang_summary_max$most_most_at_home[1], scientific = FALSE, big.mark = ",")` people and the most commonly spoken language at work is spoken by  `r format(lang_summary_max$most_most_at_work[1], scientific = FALSE, big.mark = ",")` people.  -->
+<!-- primary language at home is spoken by X people and the most commonly spoken language at work is spoken by X people.  -->
 
 ### Calculating group summary statistics:
 
