--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -81,7 +81,7 @@ knitr::include_graphics("img/vector.jpeg")
 ```
 
 You can create vectors in R using the concatenate `c()` function. 
-To create the vector `year` in Figure \@ref(fig:02-vector) we write:
+To create the vector `year` as shown in Figure \@ref(fig:02-vector) we write:
 ```{r}
 year <- c(2015, 2013, 2011, 2016, 2018)
 year
