--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -321,15 +321,11 @@ lang_messy_longer <- pivot_longer(lang_messy,
 lang_messy_longer
 ```
 
-Then we'll use `separate` to split the `value` column into two columns, one that contains only the counts of Canadians that speak each language most at home, and one that contains the counts for most at work for each region. To use `separate` we need to specify the:
+Then we'll use `separate` to split the `value` column into two columns, one that contains only the counts of Canadians that speak each language most at home, and one that contains the counts for most at work for each region. Figure \@ref(fig:img-separate) outlines what we need to specify to use `separate`.
 
-1. `data`: the data set
-
-2. `col`: the name of a the column we need to split
-
-3. `into`: a character vector of the new column names we would like to put the split data into
-
-4. `sep`: the separator on which to split
+```{r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function", out.width="1100", fig.retina = 2}
+knitr::include_graphics("img/separate_function.jpeg")
+```
 
 ```{r}
 lang_no_delimiter <- separate(lang_messy_longer,
